search, add, selection

--- a/packages/frontend/src/components/board/board.module.scss
+++ b/packages/frontend/src/components/board/board.module.scss
@@ -1,9 +1,21 @@
+@use 'src/styles/_variables.scss' as vars;
+@use 'src/styles/_mixins.scss';
+
 .board {
+  &__boardID {
+    font-weight: 600;
+
+    margin-bottom: 30px;
+
+    span {
+      font-weight: 400;
+    }
+  }
+}
+
+.boardColumns {
   display: flex;
   justify-content: space-between;
-
-  &__column {
-  }
 
   &__title {
     margin-bottom: 20px;
@@ -19,6 +31,6 @@
 
     padding: 20px;
 
-    background-color: rgb(151, 149, 149);
+    background-color: vars.$color-board-background;
   }
 }
