--- a/packages/frontend/src/components/add-card/add-card.module.scss
+++ b/packages/frontend/src/components/add-card/add-card.module.scss
@@ -14,9 +14,7 @@
 
   &_onAdd {
     &:hover {
-      -webkit-box-shadow: initial;
-      -moz-box-shadow: initial;
-      box-shadow: initial;
+      @include mixins.card();
     }
   }
 }
