--- a/packages/frontend/src/components/add-board/add-board.module.scss
+++ b/packages/frontend/src/components/add-board/add-board.module.scss
@@ -1,3 +1,12 @@
 .addBoard {
   margin-bottom: 50px;
+
+  &__plusIcon {
+    display: block;
+
+    width: 30px;
+    height: 30px;
+
+    margin: 0 auto 10px;
+  }
 }
