--- a/packages/frontend/src/components/button/button.module.scss
+++ b/packages/frontend/src/components/button/button.module.scss
@@ -11,22 +11,17 @@
 
   background-color: #dbd9d9;
 
-  transition: background-color .3s ease;
+  transition: background-color 0.3s ease;
 
-  svg {
-    display: block;
-
-    width: 50px;
-    height: 50px;
-
-    margin: 0 auto 10px;
+  &:hover {
+    background-color: vars.$color-board-background;
   }
 
   &_withIcon {
     padding: 20px;
   }
 
-  &:hover {
-    background-color: vars.$color-board-background;
+  &_smallIcon {
+    padding: 5px 8px;
   }
 }
