--- a/packages/frontend/src/components/add-board/add-board.module.scss
+++ b/packages/frontend/src/components/add-board/add-board.module.scss
@@ -1,12 +1,13 @@
 .addBoard {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  height: 35px;
+
   margin-bottom: 50px;
 
-  &__plusIcon {
-    display: block;
-
-    width: 30px;
-    height: 30px;
-
-    margin: 0 auto 10px;
+  &__input {
+    width: 300px;
   }
 }
