--- a/packages/frontend/src/components/button/button.module.scss
+++ b/packages/frontend/src/components/button/button.module.scss
@@ -1,13 +1,15 @@
 @use 'src/styles/_variables.scss' as vars;
 
 .button {
+  height: 100%;
+
   padding: 5px 20px;
 
   font-weight: 600;
   font-size: 16px;
   text-align: center;
 
-  border-radius: 10px;
+  border-radius: vars.$border-radius;
 
   background-color: #dbd9d9;
 
