--- a/packages/frontend/src/components/input/input.module.scss
+++ b/packages/frontend/src/components/input/input.module.scss
@@ -1,16 +1,22 @@
 @use 'src/styles/_variables.scss' as vars;
 
-.selection {
-  height: 34px;
-  width: 300px;
+.input {
+  width: 100%;
+  height: 35px;
 
   padding: 5px 10px;
-  margin-top: 10px;
 
   border-radius: vars.$border-radius;
   border: 1px solid #dbd9d9;
 
+  transition: border-color .3s ease;
+
+  &:hover {
+    border-color: vars.$color-board-background;
+  }
+
   &:focus {
+    border-color: #202020;
     outline: none;
   }
 }
