--- a/packages/frontend/src/components/board/board.module.scss
+++ b/packages/frontend/src/components/board/board.module.scss
@@ -1,13 +1,7 @@
 .board {
-  &__boardID {
-    font-weight: 600;
-
-    margin-bottom: 30px;
-
-    span {
-      font-weight: 400;
-    }
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
   &__boardColumns {
     display: flex;
