--- a/packages/frontend/src/components/add-card-form/add-card-form.module.scss
+++ b/packages/frontend/src/components/add-card-form/add-card-form.module.scss
@@ -1,20 +1,17 @@
 .form {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 .field {
-  p {
-    font-size: 14px;
-    margin-bottom: 5px;
-  }
-
   &__input {
     width: 100%;
   }
 
-  textarea {
+  &__textarea {
     resize: none;
 
     width: 100%;
