--- a/packages/frontend/src/components/board-ids-list/board-ids-list.module.scss
+++ b/packages/frontend/src/components/board-ids-list/board-ids-list.module.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/_variables.scss' as vars;
+@use 'src/styles/_mixins.scss';
 
 .selection {
   height: 34px;
@@ -12,5 +13,14 @@
 
   &:focus {
     outline: none;
+  }
+
+  @include mixins.mediaTablet {
+    flex-direction: column;
+    align-items: flex-start;
+
+    width: 100%;
+
+    min-width: 200px;
   }
 }
