--- a/packages/frontend/src/styles/_variables.scss
+++ b/packages/frontend/src/styles/_variables.scss
@@ -1,5 +1,7 @@
-$card-width: 300px;
+$card-max-width: 100%;
+$card-min-width: 200px;
 $card-height: 200px;
+$card-max-width-mobile: 400px;
 
 $color-board-background: #979595;
 
