--- a/packages/frontend/src/styles/_variables.scss
+++ b/packages/frontend/src/styles/_variables.scss
@@ -3,6 +3,10 @@ $card-min-width: 200px;
 $card-height: 200px;
 $card-max-width-mobile: 400px;
 
-$color-board-background: #979595;
+$color-board-background: #ACBED8;
+$color-background-main: #E8EBF7;
+$color-button_back: #D78521;
+$color-button-hover-active: #963D5A;
+$color-input-focus: #D78521;
 
 $border-radius: 10px;
